--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,18 @@
   </style>
 <![endif]-->
 
+<!-- https://stackoverflow.com/questions/26275645/how-to-support-latex-in-github-pages -->
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+        inlineMath: [['$','$']]
+      }
+    });
+  </script>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+  type="text/javascript"></script>
+
 {% if site.head_scripts %}
   {% for script in site.head_scripts %}
     {% if script contains "://" %}
