Add google analytics java script.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,20 @@
   </style>
 <![endif]-->
 
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141735057-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141735057-1');
+</script>
+
+
+
 <!-- https://stackoverflow.com/questions/26275645/how-to-support-latex-in-github-pages -->
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -51,3 +65,4 @@
     <script src="{{ script_path }}"></script>
   {% endfor %}
 {% endif %}
+
