move disqus codes from head to posts

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,11 @@
 <!-- start custom head snippets -->
 
+<!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
+
+
+
+
